@@ -7,7 +7,10 @@
  - Added transparency and fixed material alpha support and alpha testing on the 3D core [shash]
  - Changed how depth initial values are calculated (fixes SM64DS skybox) [shash] 
  - Added SSE2 version for some matrix routines [CrazyMax]
- - Some fixes in core (New SMB don't freeze now) [CrazyMax]
+ - Fixes in IPC FIFO [CrazyMax]
+ - Add Geometry FIFO simulation (New SMB and others games not freeze now) [CrazyMax]
+ - Fix in capture display (many games with both 3D screen not blinking now) [CrazyMax]
+ - Fix in master brightness (this is fix games with black screens) [CrazyMax]
  - Some optimizations in code [CrazyMax]
  - Make matrix 4x4 multiply routines use W-coordinate. [zeromus]
  - Add many matrix and vector functions to matrix.cpp [zeromus]
